<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="54dp"
    android:gravity="center"
    tools:context=".HeadActivity">

    <TextView
        android:id="@+id/appNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/davinci_insights"
        android:textSize="20sp"
        android:fontFamily="@font/roboto_bold"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text"
        android:textSize="13sp"
        android:fontFamily="@font/roboto_medium"
        android:justificationMode="inter_word"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/descriptionTextView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto1"
        android:textSize="13sp"
        android:fontFamily="@font/roboto_light"
        android:justificationMode="inter_word"
        tools:ignore="VisualLintLongText"
        android:layout_marginBottom="8dp"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/descriptionTextView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto2"
        android:textSize="13sp"
        android:fontFamily="@font/roboto_light"
        android:justificationMode="inter_word"
        android:layout_marginBottom="8dp"
        tools:targetApi="o" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_background"
        android:text="@string/botao_iniciar"
        android:textSize="15sp"
        android:textColor="@android:color/white"
        android:fontFamily="@font/roboto_medium"
        android:textAllCaps="false"
        tools:ignore="TextContrastCheck,VisualLintButtonSize" />

</LinearLayout>
