<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="54dp"
    android:gravity="center"
    tools:context=".LoadCompleteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:src="@drawable/arrow_back"
            android:contentDescription="@string/botao_voltar" />

        <TextView
            android:id="@+id/appNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/davinci_insights"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/loadingCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/carregamento_concluido"
        android:textSize="13sp"
        android:fontFamily="@font/roboto_medium"
        android:layout_marginTop="32dp"
        />

    <TextView
        android:id="@+id/loadingCompleteMessageTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text1_3"
        android:textSize="13sp"
        android:fontFamily="@font/roboto_light"
        android:layout_marginBottom="8dp"
        android:justificationMode="inter_word"
        tools:ignore="VisualLintLongText"
        tools:targetApi="o" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/viewButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/visualizar"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        tools:ignore="TextContrastCheck,VisualLintButtonSize" />

</LinearLayout>
