<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/appNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/davinci_insights"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:fontFamily="@font/roboto_bold"
            />

        <EditText
            android:id="@+id/signup_email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:autofillHints=""
            android:background="@drawable/csv_placeholder_background"
            android:drawablePadding="8dp"
            android:hint="@string/email"
            android:inputType=""
            android:padding="20dp"
            android:textColor="@color/grey"
            tools:ignore="TextFields,TextContrastCheck,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/signup_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="@drawable/csv_placeholder_background"
            android:drawablePadding="8dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColor="@color/grey"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/signup_confirm"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="@drawable/csv_placeholder_background"
            android:drawablePadding="8dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColor="@color/grey"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signup_button"
            android:background="@drawable/button_background"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@android:color/white"
            android:text="@string/sign_up"
            android:textSize="15sp"
            tools:ignore="TextContrastCheck,VisualLintButtonSize"
            app:cornerRadius="30dp" />

        <TextView
            android:id="@+id/loginRedirectText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:text="@string/already_have_account"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>