<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialogForgot"
    android:layout_margin="20dp"
    android:padding="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialogBox"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/forgotTitle"
            android:padding="10dp"
            android:text="@string/esqueci_minha_senha"
            android:textColor="#2B2F32"
            android:fontFamily="@font/roboto_bold"
            android:textSize="17sp"
                        android:drawablePadding="8dp"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/desc"
            android:text="@string/digite_seu_email"
            android:textSize="16sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textColor="#5D5F60"
            android:fontFamily="@font/roboto_medium"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/forgotTitle"
            app:layout_constraintBottom_toTopOf="@id/editBox"/>

        <EditText
            android:id="@+id/editBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginBottom="30dp"
            android:autofillHints=""
            android:backgroundTint="@color/black"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="#2B2F32"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forgotTitle"
            tools:ignore="LabelFor,TextFields,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_background"
            android:text="@string/cancelar"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/dialogBox"
            app:layout_constraintEnd_toStartOf="@id/btnReset"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editBox"
            tools:ignore="TextContrastCheck,VisualLintButtonSize" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnReset"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_background"
            android:text="@string/resetar"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/dialogBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnCancel"
            tools:ignore="TextContrastCheck,VisualLintButtonSize" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>